--- a/日志文件优化.md
+++ b/日志文件优化.md
@@ -71,20 +71,20 @@
     echo " " > logs/catalina.out  
     ```
 
-## 2.2 iUAP
+## 2.2 tomcat
 
-- 调整方案：对iUAP下的tomcat/logs/catalina.out日志按日切割
+- 调整方案：对tomcat下的tomcat/logs/catalina.out日志按日切割
 - 调整原因：
   - 随着Tomcat运行的时间越来越长， logs文件夹下的catalina.out文件会变得很大，不方便查看。
   - 历史日志占用过多的磁盘空间，没有必要保留。
 - 调整步骤：
 
 ```shell
-# 创建logrotate的iUAP配置文件
-vim /etc/logrotate.d/iuap
+# 创建logrotate的tomcat配置文件
+vim /etc/logrotate.d/tomcat
 # 输入文件内容如下
-# 注意：第一行中{之前的路径为iUAP的catalina.out日志输出路径，实际使用时，根据iUAP的安装路径来修改此处的内容
-/home/work/iuap/v3.5.5/wbalone/iuap-server/middleware/tomcat/logs/catalina.out {
+# 注意：第一行中{之前的路径为tomcat的catalina.out日志输出路径，实际使用时，根据tomcat的安装路径来修改此处的内容
+/tomcat/logs/catalina.out {
     daily
     rotate 7
     missingok
@@ -96,6 +96,6 @@ vim /etc/logrotate.d/iuap
 }
 
 # 执行logrotate
-logrotate -vf /etc/logrotate.d/iuap
+logrotate -vf /etc/logrotate.d/tomcat
 ```
 
